syntax = "proto3";
package user.v1;

option go_package = "github.com/Go-Golang-Gorm-Postgres-Gqlgen-Graphql/main/shared/protobufs/generated/user/v1;userv1";

import "account/v1/register.proto";
import "user/v1/user.proto";

service UserService {
    rpc CreateUser(account.v1.RegisterRequest) returns (user.v1.UserResponse);
}